# Pokemon-CPP-Project

./: CMakeLists.txt  GameManager.cpp  GameManager.h  main.cpp
Players/: AI.cpp  AI.h  Character.cpp  Character.h  Player.cpp  Player.h
Pokemon classes/: Moves.cpp  Moves.h  Movesets.h  Pokemon.cpp  Pokemon.h  Stats.cpp  Stats.h  Type.cpp  Type.h  old battle system.txt
Visuals/: Animations.cpp  Animations.h  Displays.cpp  Displays.h
